--- a/index.html
+++ b/index.html
@@ -15,6 +15,8 @@
 		<script src="http://code.jquery.com/jquery-2.2.2.min.js"></script>
     <script src="scripts/app.js"></script>
 
+		<script src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
+
 		<title>Giffaw</title>
 
 	</head>
@@ -32,6 +34,7 @@
 				</div>
 				<div class="col-sm-8">
 					<div class="gif-gallery"></div>
+
 				</div>
 			</div>
 		</div>
